Added additional comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
                         <h2 class="logo-font text-black my-0"><strong>Love</strong> Fitness</h2>
                     </a>
                 </div>
+                <!-- Search -->
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="">
                         <div class="input-group w-100">
@@ -54,6 +55,7 @@
                         </div>
                     </form>
                 </div>
+                <!-- Account option when logged in or out-->
                 <div class="col-lg-4 col-sm-4 menu-top-right">
                     <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                         <li class="list-inline-item dropdown">
