--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,27 +1,27 @@
-
+<!-- Main nav container -->
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
+        </li>
+        <!-- Main nav menu links -->
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
-
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Shop
             </a>
-                    
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="{% url 'products' %}?category=sports_bra,leggings" class="dropdown-item">Women</a>
                 <a href="{% url 'products' %}?category=shorts,tops_t-shirts" class="dropdown-item">Men</a>
@@ -34,8 +34,8 @@
                 Plans
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Exercise</a>
-                <a href="" class="dropdown-item">Nutrition</a>
+                <a href="{% url 'plans' %}?plan=exercise" class="dropdown-item">Exercise</a>
+                <a href="{% url 'plans' %}?plan=nutrition" class="dropdown-item">Nutrition</a>
             </div>
         </li>
         <li class="nav-item dropdown">
@@ -49,8 +49,6 @@
                 <a href="" class="dropdown-item">All Clothing</a>
             </div>
         </li>
-
-
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
