Added new categories

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -34,8 +34,8 @@
                 Plans
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="{% url 'plans' %}?plan=exercise" class="dropdown-item">Exercise</a>
-                <a href="{% url 'plans' %}?plan=nutrition" class="dropdown-item">Nutrition</a>
+                <a href="{% url 'products' %}?category=exercise" class="dropdown-item">Exercise</a>
+                <a href="{% url 'products' %}?category=nutrition" class="dropdown-item">Nutrition</a>
             </div>
         </li>
         <li class="nav-item dropdown">
