--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %} 
+
 {% block extra_css %}
+<!-- CSS -->
 <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}" />
 {% endblock %} {% block page_header %}
 <div class="container header-container">
