--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-8 offset-2">
                 <!-- Contact us form -->
-                <form method="POST" action="{% url 'contact' %}" class="form mb-3">
+                <form method="POST" action="/contact/" class="form mb-3">
                     {% csrf_token %}
                     {{ form | crispy }}
                     <!-- submit message button -->
