--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -39,7 +39,7 @@
             </div>
         </li>
         <li class="nav-item">
-            <a href="{% url 'contact' %}" class="nav-link text-bright mt-0 me-5" id="contact-link">
+            <a href="{% url 'contact' %}" class="logo-font font-weight-bold nav-link text-black" id="contact-link">
                 Contact Us
             </a>
         </li>
