--- a/blog/templates/blog/add_blog.html
+++ b/blog/templates/blog/add_blog.html
@@ -12,43 +12,19 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container container-pad mt-2 mb-5">
-        <div class="row">
-            <!-- Add blog post heading & Message -->
-            <div class="col-12 col-md-6 h-100">
-                <h2 class="fw-bold mb-4 display-6">Post</h2>
-                <h6 class="text-muted">Add a Blog Post</h6>
-                <hr>
-            </div>
-        </div>
-
-        <!-- Add blog container -->
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <!-- Add blog post form -->
-                <form method="POST" action="{% url 'add_blog_post' %}" class="form mb-3" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{ form | crispy }}
-                    <!-- Add blog post and cancel buttons -->
-                    <div class="inline-flex-pos float-end mt-3">
-                        <a class="btn rounded-2 btn-outline-dark py-2" href="{% url 'blog' %}">Cancel</a>
-                        <button class="btn rounded-2 btn-text text-capitalize py-2 btn-bg-col" type="submit">Add Blog
-                            Post</button>
-                    </div>
-                </form>
-            </div>
+<div class="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col text-center mt-5">
+            <h2 class="logo-font text-black mt-5">Add Blog</h2>
+            <ul class="mt-5">
+                {% for post in object_list %}
+                <li><a href="{% url 'blog_detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }} {{ post.author.last_name }}<br/>
+                    {{ post.body }}
+                {% endfor %}
+                </li>
+            </ul>
         </div>
     </div>
-{% endblock %}
-
-{% block postloadjs %}
-{{ block.super }}
-    <script>
-        // jshint esversion: 6
-        $('#id-image').change(function () {
-            var file = $('#id-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-        });
-    </script>
+</div>
 {% endblock %}
