--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -5,7 +5,6 @@
     <div class="container hdr-container">
         <div class="row">
             <div class="col">
-                
             </div>
         </div>
     </div>
@@ -13,15 +12,15 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container container-pad mt-2 mb-5">
-        <div class="row">
-            <!-- contact us header and message -->
-            <div class="col-8 offset-2">
-                <h2 class="fw-bold mb-4 display-6">Contact Us</h2>
-                <h6 class="text-muted">Fill in the form below to get in touch with the store.</h6>
-                <hr>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 mx-auto">
+                    <hr>
+                    <h2 class="fw-normal logo-font mb-4 text-center text-black display-6">Contact Us</h2>
+                    <h5 class="text-muted text-center">We'd love to hear from you</h5>
+                    <hr>
+                </div>
             </div>
-        </div>
 
         <!-- contact us form container -->
         <div class="row">
@@ -31,7 +30,7 @@
                     {% csrf_token %}
                     {{ form | crispy }}
                     <!-- submit message button -->
-                    <button class="btn rounded-2 btn-text text-capitalize py-2 mt-2 btn-bg-col float-end" type="submit">Submit</button>
+                    <button class="btn btn-success rounded-0 text-capitalize py-2 mb-4 btn-bg-col float-end" type="submit">Submit</button>
                 </form>
             </div>
         </div>
