--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -4,7 +4,8 @@
 {% block extra_css %}
 <!-- CSS -->
 <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}" />
-{% endblock %} {% block page_header %}
+{% endblock %}
+{% block page_header %}
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -30,7 +31,7 @@
             <p class="text-muted">Default Delivery Information</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %} {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                <button class="btn btn-black rounded-1 text-uppercase float-right">Update Information</button>
             </form>
         </div>
         <!-- Main order history container -->
