--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,5 +1,6 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 {% load static %}
+
 {% block page_header %}
 <!--Main hea container -->
 <div class="container header-container">
@@ -43,7 +44,9 @@
                 <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                 {% else %}
                 <small class="text-muted">No Rating</small>
-                {% endif %} {% if request.user.is_superuser %}
+                {% endif %} 
+                
+                {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
                     <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
@@ -106,9 +109,131 @@
         </div>
     </div>
 </div>
+<!-- Reviews section -->
+<div class="row mt-3 mb-5">
+    <div class="col-12 col-lg-8 offset-lg-2 mt-2 mb-5">
+        <div class="inline-div">
+            <h4 class="text-center mb-3" id="reviews"><span>({{ post.reviews.count }})</span> Reviews</h4>
+            <h4 class="text-center mb-3 ms-3" id="add-comment">Click here to add a review</h4>
+            <hr>
+        </div>
+        <!-- comments -->
+        <div id="comment-info">
+            {% for review in post.reviews.all %}
+                <p class="mt-3 mb-3 btn-text">{{ review.body }}</p>
+                <small class="text-muted">by - {{ review.user }}</small><br />
+                <small class="text-muted">{{ review.date_added }}</small>
+            {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                    <a role="button" class="text-danger text-decoration-none" data-toggle="modal"
+                        data-target="#modal-overlay{{ forloop.counter0 }}">Delete Review</a>
+                {% endif %}
+            {% endif %}
+            {% endfor %}
+        <!-- showing reviews section -->
+        <div id="review-info">
+            <!-- Got help with pagination in django here: https://www.youtube.com/watch?v=wmYSKVWOOTM -->
+            {% if reviews %}
+            <!--  Got help with below here https://docs.djangoproject.com/en/dev/ref/templates/builtins/?from=olddocs#dictsort -->
+            {% for review in page.object_list|dictsortreversed:"timestamp" %}
+            <div class="card mb-3">
+                <div class="card-header">
+                    <h5><strong>{{ review.title }}</strong></h5>
+                    {% if request.user == review.user or request.user.is_superuser %}
+                    <a href="{% url 'edit_review' product.id review.id %}" class="text-decoration-none text-bright">Edit</a> |
+                    <a role="button" class="text-danger text-decoration-none" data-toggle="modal" data-target="#modal-overlay{{ forloop.counter0 }}">Delete</a>
+                    {% endif %}
+                    <div id="modal-overlay{{ forloop.counter0 }}" class="modal" tabindex="-1" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title text-capitalize">Are you sure you want to delete this review?</h4>
+                                    <span class="float-end">
+                                        <a href="{% url 'product_details' product.id %}" class="close-btn text-decoration-none text-bright"><i class="far fa-window-close icon"></i></a>
+                                    </span>
+                                </div>
+                                <div class="modal-footer">
+                                    <a href="{% url 'product_details' product.id %}" class="btn rounded-2 mt-4 btn-outline-dark"> Cancel</a>
+                                    <a href="{% url 'delete_review' product.id review.id %}" class="btn rounded-2 text-capitalize mt-4 btn-bg-col" aria-hidden="true">Confirm</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    {% if review.rating == 1 %}
+                    <span class="card-title"><i class="fas fa-star gold-star"></i></span>
+                    {% endif %} {% if review.rating == 2 %}
+                    <span class="card-title"><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i></span>
+                    {% endif %} {% if review.rating == 3 %}
+                    <span class="card-title"><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i></span>
+                    {% endif %} {% if review.rating == 4 %}
+                    <span class="card-title"><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i></span>
+                    {% endif %} {% if review.rating == 5 %}
+                    <span class="card-title"><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i><i class="fas fa-star gold-star"></i></span>
+                    {% endif %}
+                    <p class="card-text">{{ review.comment }}</p>
+                    <p class="small text-muted"><i>{{ review.user }}</i></p>
+                    <p><span class="small text-muted">{{ review.created }}</span></p>
+                </div>
+            </div>
+            {% endfor %}
+          {% else %}
+            <h3>No reviews for this product</h3>
+            {% endif %}
+            <!-- reviews will be shown in paginated format -->
+            <div class="row">
+                <div class="col-12">
+                    <div class="paginate-items text-center mt-1">
+                        <div class="current">
+                            <p>Page {{ page.number }} of {{ page.paginator.num_pages }}</p>
+                        </div>
+                        <div class="step-links">
+                            {% if page.has_previous %}
+                            <a href="?page={{ page.previous_page_number }}" class="text-decoration-none"> <i class="fas fa-arrow-left ms-2"></i> Previous </a>
+                            {% endif %} {% if page.has_next %}
+                            <a href="?page={{ page.next_page_number }}" class="text-decoration-none"> Next <i class="fas fa-arrow-right me-2"></i> </a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- allow authenticated users to add a review -->
+        <div id="add-review-form" class="mb-5">
+            {% if user.is_authenticated %}
+            <form action="{% url 'add_review' product.id %}" method="POST">
+                {% csrf_token %}
+                <label for="rating">Rating:</label>
+                <select name="rating" id="rating" class="form-control">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+
+                <label for="title">Review Heading:</label>
+                <input type="text" id="title" name="title" class="form-control" placeholder="Enter a heading for your review" />
+
+                <label for="comment">Comment</label>
+                <textarea name="comment" id="comment" cols="30" rows="5" class="form-control"></textarea>
+
+                <input type="submit" class="btn btn-success rounded-0 text-uppercase mt-5" value="Add Review" />
+            </form>
+            {% else %}
+            <p class="text-start mb-3">
+                Please <a href="{% url 'account_login' %}" class="text-decoration-none text-bright">Login</a> or <a href="{% url 'account_signup' %}" class="text-decoration-none text-bright">Register</a> an account to leave a Review
+            </p>
+            {% endif %}
+        </div>
+    </div>
+</div>
 {% endblock %}
+
+
 <!-- Postload Javascript -->
 {% block postloadjs %}
-{{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
+{{ block.super }} 
+{% include 'products/includes/quantity_input.html' %}
 {% endblock %}
