--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         {% block corecss %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
         <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css" />
-        <link rel="icon" href="{% static 'favicon.ico' %}" />
+        <link rel="icon" href="{% static '/favicon.ico' %}" />
         {% endblock %}
         {% block extra_css %}
         {% endblock %}
@@ -201,7 +201,7 @@
                             <li class="mb-2"><a href="{% url 'products' %}?category=leggings" class="text-black">Leggings</a></li>
                             <li class="mb-2"><a href="{% url 'products' %}?category=sports_nutrition" class="text-black">Nutrition</a></li>
                             <li class="mb-2"><a href="{% url 'products' %}?category=shorts" class="text-black">Shorts</a></li>
-                            <li class="mb-2"><a href="{% url 'products' %}?category=sports_bra" class="text-black">Soprts Bra</a></li>
+                            <li class="mb-2"><a href="{% url 'products' %}?category=sports_bra" class="text-black">Sports Bra</a></li>
                             <li class="mb-2"><a href="{% url 'products' %}?category=tops_t-shirts" class="text-black">Tops &amp; T-Shirts</a></li>
                         </ul>
                     </div>
