Removed link to JS file that has been deleted

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -66,13 +66,8 @@
     <button id="next"><i class="fas fa-arrow-right"></i></button>
   </div>
 
-  <script src="main.js"></script>
-</body>
-</html>
-
-
 {% endblock %}
 <!-- Postload Javascript -->
 {% block postloadjs %}
-<script src="{% static 'js/carousel.js' %}"></script>
+<script src="{% static 'carousel.js' %}"></script>
 {% endblock %}
