--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
 </div>
 {% endblock %}
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/carousel.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'home/css/carousel.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content %}
@@ -69,5 +69,5 @@
 {% endblock %}
 <!-- Postload Javascript -->
 {% block postloadjs %}
-<script src="{% static 'carousel.js' %}"></script>
+<script type="text/javascript" src="{% static 'home/js/carousel.js' %}"></script>
 {% endblock %}
