--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -69,5 +69,5 @@
 {% endblock %}
 <!-- Postload Javascript -->
 {% block postloadjs %}
-<script type="text/javascript" src="{% static 'home/js/carousel.js' %}"></script>
+<script src="{% static 'home/js/carousel.js' %}"></script>
 {% endblock %}
