--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,7 +2,7 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="all-products-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
         </li>
