--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -38,8 +38,8 @@
                             <th scope="col">Subtotal</th>
                         </tr>
                     </thead>
+                     <!-- Display Items In Bag -->
                     {% for item in bag_items %}
-                    <!-- Display Items In Bag -->
                     <tr>
                         <td class="p-3 w-25">
                             {% if item.product.image %}
@@ -137,7 +137,7 @@
 {{ block.super }} 
 {% include 'products/includes/quantity_input.html' %}
 
-<script type="text/javascript">
+<script>
     // Update quantity on click
     $(".update-link").click(function (e) {
         var form = $(this).prev(".update-form");
