--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %} 
-{% load bag_tools %} 
+{% load bag_tools %}
+{% block extra_title %}Checkout{% endblock %}
 
 {% block extra_css %}
 <!-- CSS -->
