HTML Validation: Removed script type=text/javascript

--- a/templates/base.html
+++ b/templates/base.html
@@ -243,7 +243,7 @@
             </div>
         </footer>
         {% block postloadjs %}
-        <script type="text/javascript">
+        <script>
             let toastElList = [].slice.call(document.querySelectorAll(".toast"));
             let toastList = toastElList.map(function (toastEl) {
                 let option = {
