Adding missing closing div tags

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -6,9 +6,7 @@
         <div class="col"></div>
     </div>
 </div>
-{% endblock %}
-
-{% block content %}
+{% endblock %} {% block content %}
 <!-- Overlay white background -->
 <div class="overlay"></div>
 <!-- Main Blog Detail Container -->
@@ -38,17 +36,17 @@
                         <a class="text-info text-decoration-none" href="{% url 'update_blog' post.pk %}">Edit</a> |
                         <a class="text-danger text-decoration-none" data-toggle="modal" data-target="#modal-overlay" href="{% url 'delete_blog' post.pk %}">Delete</a>
                     </div>
-                </div>
-                {% endif %} 
-              {% endif %}
-                <!-- Card footer displaying blog post date -->
-                <div class="card-footer text-muted">
-                    {{ post.post_date }}
+                    <!-- Card footer displaying blog post date -->
+                    <div class="card-footer text-muted">
+                        {{ post.post_date }}
+                    </div>
+                    {% endif %}
+                  {% endif %}
                 </div>
             </div>
             {% endfor %}
         </div>
     </div>
+    <br />
+    {% endblock %}
 </div>
-<br>
-{% endblock %}
