--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -34,7 +34,7 @@
                     {% if is_product_in_favourites %}
                     <a href="{% url 'remove_product_from_favourites' product.id 'product' %}" aria-label="remove product from favourites" class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
                     {% else %}
-                    <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites" class="favourite text-danger ml-3"><i class="far fa-heart"></i></a>
+                    <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites" class="favourite text-danger ml-3"><i class="fas fa-list"></i></a>
                     {% endif %}
                 </div>
                 <!-- Main Products Container -->
