HTML: Added fw-bold to info bannter and footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,7 @@
                 </nav>
             </div>
             <!-- Information Banner -->
-            <div id="info-banner" class="row text-center bg-wild-blue-yonder">
+            <div id="info-banner" class="row fw-bold text-center bg-wild-blue-yonder">
                 <div class="col">
                     <div class="mt-1 mb-2">
                         <span class="text-black text-center">Free worldwide delivery on orders over £{{ free_delivery_threshold }}!</span>
@@ -161,7 +161,7 @@
                 <div class="row">
                     <div class="col">
                         <i class="fas fa-cart-plus text-black" aria-hidden="true"></i>
-                        <span class="text-black text-center">Free worldwide delivery over £{{ free_delivery_threshold }}</span> 
+                        <span class="fw-bold text-black text-center">Free worldwide delivery over £{{ free_delivery_threshold }}</span> 
                     </div>
                 </div>
             </div>
