HTML: Removed sr-only from carousel arrows

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
 {% block content %}
 <!-- Main Image Carousel -->
 <div class="slider">
-    <div class="slide current" data-bs-interval="10000">
+    <div class="slide current" data-bs-interval="1000">
       <div class="content">
         <h2 class="">Fitness Equipment</h2>
         <p class="">View our extensive range of fitness equipment.</p>
@@ -62,8 +62,8 @@
     </div>
   </div>
   <div class="buttons">
-    <button id="prev" class="sr-only" aria-label="arrow-left"><i class="fas fa-arrow-left"></i></button>
-    <button id="next" class="sr-only" aria-label="arrow-right"><i class="fas fa-arrow-right" ></i></button>
+    <button id="prev" aria-label="arrow-left"><i class="fas fa-arrow-left"></i></button>
+    <button id="next" aria-label="arrow-right"><i class="fas fa-arrow-right" ></i></button>
   </div>
 
 {% endblock %}
